// test1 proto

package AA;

enum FriendType{
  Human,
  Animal,
}

package AA.BB;

message DogInfo {
  required string name= 2;
  required int32 age =1;
  enum Sex {
    Male,
    Female,
  }
  required Sex sex = 6 [default=Male];
  optional FriendType  friend_type = 4[default= Human];
}

package AA;
message FamilyInfo {
	optional string address = 1;
	optional int32 numberdogs = 2;
}

package AA.BB.CC;

message DogFamilyInfo {
  optional FamilyInfo family = 1;
  repeated double utility_fee = 2;
  repeated DogInfo dogs = 3;
  repeated string locations = 4;
}
